--- a/html/tutorials/first_time/analyzing.html
+++ b/html/tutorials/first_time/analyzing.html
@@ -50,5 +50,5 @@ you have permission to scan any potential hosts that you're thinking
 of testing.
 
 <hr>
-<a href=../../satan_documentation.html> Back to the SATAN Documentation Index</a>
+<a href="../../satan_documentation.html"> Back to the SATAN Documentation Index</a>
 
