--- a/html/tutorials/first_time/learning_to_use.html
+++ b/html/tutorials/first_time/learning_to_use.html
@@ -27,4 +27,4 @@ Hints, Further tricky security implications, or Getting The Big Picture (tm)</A>
 Would be a <STRONG>very</STRONG> good idea.
 
 <hr>
-<a href=../../satan_documentation.html> Back to the Documentation TOC</a>
+<a href="../../satan_documentation.html"> Back to the Documentation TOC</a>
